--- a/static/css/main.css
+++ b/static/css/main.css
@@ -151,6 +151,9 @@ body {
 .form-control, .form-select {
     border-radius: var(--border-radius-sm);
 }
+#div_id_bio > label {
+    font-weight: 600;
+}
 
 /*
  * =============================================
@@ -327,6 +330,12 @@ body {
     height: 50px;
     object-fit: cover;
     border-radius: 50%;
+    border: 4px solid var(--color-surface-bg);
+    box-shadow: var(--box-shadow-sm);
+    border: 4px solid var(--color-warning-bg, orange);
+}
+.dashboard-nav .list-group-item-action {
+    font-weight: 500;
 }
 
 .profile-avatar-main {
@@ -334,6 +343,8 @@ body {
     height: 150px;
     object-fit: cover;
     border-radius: 50%;
+    border: 4px solid var(--color-warning-bg, orange);
+    box-shadow: var(--box-shadow-sm);
 }
 
 /* Cart Styles */
@@ -562,6 +573,19 @@ body {
 
 .quantity-widget .quantity-input:focus {
     outline: none;
+}
+.avatar-upload-container .avatar-change-btn {
+    position: absolute;
+    bottom: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+}
+
+.avatar-upload-container:hover .avatar-change-btn {
+    opacity: 1;
 }
 
 
